WebCore/page/SpatialNavigation.h
@@ -27,6 +27,7 @@
 
 namespace WebCore {
 
+class Element;
 class Frame;
 class IntRect;
 class Node;
@@ -106,6 +107,7 @@ struct FocusCandidate {
 
 long long distanceInDirection(Node*, Node*, FocusDirection, FocusCandidate&);
 bool scrollInDirection(Frame*, FocusDirection);
+void scrollIntoView(Element*);
 bool hasOffscreenRect(Node*);
 bool isInRootDocument(Node*);
 
